--- a/views/employee/addOrEdit.ejs
+++ b/views/employee/addOrEdit.ejs
@@ -48,12 +48,14 @@
           <label class="form-label">Mobile</label>
 
           <input
-            type="text"
+            type="tel"
             class="form-control"
             name="mobile"
             placeholder="Mobile"
             value="<%= employee.mobile %>"
           />
+
+          <div class="text-danger"><%= employee.mobileError %></div>
         </div>
 
         <div class="form-group">
@@ -69,7 +71,7 @@
         </div>
 
         <div class="form-group">
-          <button type="submit" class="submit-button">Submit</button>
+          <button type="submit" class="submit-button"><%= buttonText %></button>
         </div>
       </form>
     </div>
